--- a/style.css
+++ b/style.css
@@ -1,1 +1,36 @@
+#wrapper{
+    position: relative;
+}
 
+#video{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    visibility: hidden;
+}
+
+#camera-canvas{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 50;
+}
+
+#rect-canvas{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+}
+
+#qr-msg{
+    position: absolute;
+    top: 500px;
+    left: 0px;
+}
+
+#data-matrix{
+    position: absolute;
+    top: 600px;
+    left: 0px;
+}
